[tool.poetry]
name = "excelparser"
version = "0.1.0"
description = ""
authors = ["bhaskardutta95 <bhaskardutta2795@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
